@@ -1,3 +1,6 @@
+2011-02-10  Kirit Saelensminde  <kirit@felspar.com>
+ JSON to JSON coercions are now supported and logging now accepts any parameter type which is coercable to JSON.
+
 2010-11-16  Kirit Saelensminde  <kirit@felspar.com>
  Added a new basic logging library.
 
